<resources>
    <string name="app_name">Food Mate</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="check_restaurant">Is restaurant?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy Statement</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="no_account">No account? Register</string>
    <string name="guest">Proceed as guest</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_add">Add New</string>
    <string name="find_restaurant">Find tasty cuisines based on your dietary requirements</string>
    <string name="search">Search Cuisines</string>
    <string name="recent">Recently Added</string>
    <string name="popular">Popular Choices</string>
    <string name="choose_file">Choose File</string>
    <string name="cuisine_name">Cuisine Name</string>
    <string name="price">Price</string>
    <string name="description">Cuisine Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="rating">Rating</string>
    <string name="upload">Upload</string>
    <string name="allergens">Allergens</string>
    <string name="diets">Diets</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="call">Call</string>
    <string name="map">Map</string>
    <string name="cuisinesDetails">Cuisine Details</string>
    <string name="brel">Brel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="filter">Filter</string>
    <string name="search_results">Search</string>
    <string name="add_favs">Add to Favourites</string>
    <string name="share">Share</string>
    <string name="help_faq">Help/FAQs</string>
    <string name="restaurantLocation">Location</string>
    <string name="restaurantPhoneNumber">Phone Number</string>
    <string name="restaurantWebsite">Website</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Diets</string>
    <string name="msg_no_notes">No entries found</string>
    <string name="lbl_new_note_title">New Diet</string>
    <string name="lbl_edit_note_title">Edit Diet</string>
    <string name="hint_enter_note">Enter your diet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Food Mate!</string>
    <string name="slide_1_desc">The easiest way to find cuisines that meet your dietary requirements from your favourite restaurant!</string>
    <string name="slide_2_title">Complete Your Profile</string>
    <string name="slide_2_desc">Set up your food profile by filling in your dietary requirements</string>
    <string name="slide_3_title">Search Cuisines</string>
    <string name="about1">Version Info: 1.0.2 - 18171e-3178j</string>
    <string name="privacy1">Effective date: August 17, 2018</string>
    <string name="privacy_text">

        Food Mate ("us", "we", or "our") operates the website and the Food Mate mobile application (the "Service").
        This page informs you of our policies regarding the collection, use, and disclosure of personal data when you
        use our Service and the choices you have associated with that data. This Privacy Policy for Food Mate is powered
        by FreePrivacyPolicy.com. We use your data to provide and improve the Service. By using the Service, you agree to
        the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy,
        terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.

        Information Collection And Use
        We collect several different types of information for various purposes to provide and improve our Service to you.

        Types of Data Collected
        Personal Data. While using our Service, we may ask you to provide us with certain personally identifiable
        information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may
        include, but is not limited to:

        Email address
        Cookies and Usage Data

        Usage Data. We may also collect information that your browser sends whenever you visit our Service or when you
        access the Service by or through a mobile device ("Usage Data"). This Usage Data may include information such as
        your computer\'s Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service
        that you visit, the time and date of your visit, the time spent on those pages, unique device identifiers and other
        diagnostic data.

        When you access the Service by or through a mobile device, this Usage Data may include information such as the
        type of mobile device you use, your mobile device unique ID, the IP address of your mobile device, your mobile
        operating system, the type of mobile Internet browser you use, unique device identifiers and other diagnostic data.


        Tracking and Cookies Data. We use cookies and similar tracking technologies to track the activity on our Service
        and hold certain information.

        Cookies are files with small amount of data which may include an anonymous unique identifier. Cookies are sent
        to your browser from a website and stored on your device. Tracking technologies also used are beacons, tags,
        and scripts to collect and track information and to improve and analyze our Service.
        You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent.
        However, if you do not accept cookies, you may not be able to use some portions of our Service.

        Examples of Cookies we use:
        Session Cookies. We use Session Cookies to operate our Service.
        Preference Cookies. We use Preference Cookies to remember your preferences and various settings.
        Security Cookies. We use Security Cookies for security purposes.

        Use of Data
        Food Mate uses the collected data for various purposes:

        To provide and maintain the Service
        To notify you about changes to our Service
        To allow you to participate in interactive features of our Service when you choose to do so
        To provide customer care and support
        To provide analysis or valuable information so that we can improve the Service
        To monitor the usage of the Service
        To detect, prevent and address technical issues

        Transfer Of Data
        Your information, including Personal Data, may be transferred to — and maintained on — computers located
        outside of your state, province, country or other governmental jurisdiction where the data protection laws
        may differ than those from your jurisdiction.

        If you are located outside United Kingdom and choose to provide information to us, please note that we
        transfer the data, including Personal Data, to United Kingdom and process it there.


        Your consent to this Privacy Policy followed by your submission of such information represents your agreement
        to that transfer.

        Food Mate will take all steps reasonably necessary to ensure that your data is treated securely and in
        accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.

        Disclosure Of Data
        Legal Requirements
        Food Mate may disclose your Personal Data in the good faith belief that such action is necessary to:

        To comply with a legal obligation
        To protect and defend the rights or property of Food Mate
        To prevent or investigate possible wrongdoing in connection with the Service
        To protect the personal safety of users of the Service or the public
        To protect against legal liability

        Security Of Data
        The security of your data is important to us, but remember that no method of transmission over the Internet,
        or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect
        your Personal Data, we cannot guarantee its absolute security.

        Service Providers
        We may employ third party companies and individuals to facilitate our Service ("Service Providers"), to provide
        the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.

        These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.

        Analytics
        We may use third-party Service Providers to monitor and analyze the use of our Service.

        Google Analytics

        Google Analytics is a web analytics service offered by Google that tracks and reports website traffic.
        Google uses the data collected to track and monitor the use of our Service. This data is shared with other
        Google services. Google may use the collected data to contextualize and personalize the ads of its own advertising
        network.


        For more information on the privacy practices of Google, please visit the Google Privacy and Terms
        web page: https://policies.google.com/privacy?hl=en

        Links To Other Sites
        Our Service may contain links to other sites that are not operated by us. If you click on a third party link,
        you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site
        you visit.

        We have no control over and assume no responsibility for the content, privacy policies or practices of any
        third party sites or services.

        Children's Privacy
        Our Service does not address anyone under the age of 18 ("Children").

        We do not knowingly collect personally identifiable information from anyone under the age of 18. If you are
        a parent or guardian and you are aware that your Children has provided us with Personal Data, please contact us.
        If we become aware that we have collected Personal Data from children without verification of parental consent, we
        take steps to remove that information from our servers.

        Changes To This Privacy Policy
        We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy
        Policy on this page.

        We will let you know via email and/or a prominent notice on our Service, prior to the change becoming effective and
        update the "effective date" at the top of this Privacy Policy.

        You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are
        effective when they are posted on this page.

        Contact Us
        If you have any questions about this Privacy Policy, please contact us:

        By email: info@foodmate.com
        By visiting this page on our website: www.foodmate.com</string>
</resources>