<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="msc.project.foodmate.classes.About">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@color/white">
            <!-- This text is not scrollable-->

            <TextView

                android:text="@string/about"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about1"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_grey"/>

            <TextView

                android:text="@string/privacy"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy1"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"/>

                <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"/>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
