<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="msc.project.foodmate.Login"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:background="@drawable/pic">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/blackOverlay">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/foodmate_logo"/>


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/email_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/orange700" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/etEmail"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/orange700"/>

    <Button
        android:id="@+id/bSignin"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:elevation="3dp"
        android:layout_marginTop="29dp"
        android:background="@color/orange700"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:layout_below="@+id/bSignin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:linksClickable="true"
        android:clickable="true" />

    <TextView
        android:id="@+id/tvGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest"
        android:layout_below="@+id/tvRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textColor="@color/white"
        android:linksClickable="true"
        android:clickable="true" />


</RelativeLayout>
</LinearLayout>
