<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="msc.project.foodmate.MainHome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
    <TextView
        android:id="@+id/tvFind"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:typeface="serif"
        android:text="@string/find_restaurant" />

        <Button
            android:id="@+id/bSearch"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/tvFind"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/search"
            android:background="@drawable/ghost_button"
            android:textColor="@color/orange700"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tvRecent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bSearch"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="15sp"
            android:typeface="serif"
            android:text="@string/recent" />

    </RelativeLayout>

</FrameLayout>
