<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="msc.project.foodmate.classes.GuestCuisineDetails"
    android:orientation="vertical"
    android:id="@+id/linearLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivCuisine"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/image_loading" />

        <android.support.v7.widget.CardView
            android:layout_width="370dp"
            android:layout_height="300dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="20dp"
            android:elevation="5dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tvCuisineName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuisine_name"
                    android:fontFamily="sans-serif-light"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/price"
                    android:textSize="1sp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="26dp"
                    android:fontFamily="sans-serif-light"
                    />

                <TextView
                    android:id="@+id/tvRestaurantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvCuisineName"
                    android:text="@string/brel"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="3dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvRestaurantName"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:fontFamily="sans-serif-light"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvIngredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvDescription"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:text="@string/ingredients"
                    android:textSize="1sp" />

                <TextView
                    android:id="@+id/tvDiet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvIngredients"
                    android:textColor="@color/white"
                    android:text="@string/ingredients"
                    android:textSize="1sp" />


                <Button
                    android:id="@+id/bCall"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="19dp"
                    android:layout_marginLeft="45dp"
                    android:background="@drawable/ghost_button"
                    android:elevation="3dp"
                    android:text="@string/call"
                    android:textAllCaps="true"
                    android:textColor="@color/orange700"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light" />

                <Button
                    android:id="@+id/bMap"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignBottom="@+id/bCall"
                    android:layout_toStartOf="@+id/tvPrice"
                    android:background="@drawable/ghost_button"
                    android:elevation="3dp"
                    android:text="@string/map"
                    android:textAllCaps="true"
                    android:textColor="@color/orange700"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</LinearLayout>


